@@ -1,5 +1,11 @@
 2017-04-24  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/80494
+	* tree-scalar-evolution.c (analyze_scalar_evolution_1): Bail
+	out for complex types.
+
+2017-04-24  Richard Biener  <rguenther@suse.de>
+
 	* tree-ssa-sccvn.h (run_scc_vn): Adjust prototype.
 	* tree-ssa-sccvn.c (print_scc): Print SCC size.
 	(extract_and_process_scc_for_name): Never fail but drop SCC to varying.
